--- a/index.html
+++ b/index.html
@@ -27,15 +27,16 @@
      </li>
      <li class="has-child"><a href="#">My Leisure Activity</a>
           <ul>
-             <li><a href="#"><dl><dt><img src="img/06.jpg" alt=""></dt><dd>Activity Top</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/07.jpg" alt=""></dt><dd>Motorrad</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/08.jpg" alt=""></dt><dd>EV Racing Kart</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/08.jpg" alt=""></dt><dd>My Study</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/09.jpg" alt=""></dt><dd>Gunpla</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/10.jpg" alt=""></dt><dd>Programming</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/11.jpg" alt=""></dt><dd>Mountain Climbing</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/12.jpg" alt=""></dt><dd>My Gadget</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/13.jpg" alt=""></dt><dd>Photo & Movie</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/activity_top.jpg" alt=""></dt><dd>Activity Top</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/motorrad_top.jpg" alt=""></dt><dd>Motorrad</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/EVRacingKart_top.jpg" alt=""></dt><dd>EV Racing Kart</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/MyStudy.jpg" alt=""></dt><dd>My Study</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/Gunpla_top.jpg" alt=""></dt><dd>Gunpla</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/Programming.jpg" alt=""></dt><dd>Programming</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/MountainClimbing_top.jpg" alt=""></dt><dd>Mountain Climbing</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/Diving_top.jpg" alt=""></dt><dd>Diving</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/MyGadget_top.jpg" alt=""></dt><dd>My Gadget</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/Photo&Movie_top.jpg" alt=""></dt><dd>Photo & Movie</dd></dl></a></li>
      </ul>
      </li>
      <li><a href="#">Blog</a></li>
@@ -44,7 +45,7 @@
 
     <h1>This is My Life.</h1>
     <div id="video-area">
-      <video id="video" poster="img/movie.jpg" webkit-playsinline playsinline muted autoplay loop>
+      <video id="video" poster="img/Top.jpg" webkit-playsinline playsinline muted autoplay loop>
         <!--
         poster：動画ファイルが利用できない環境で代替表示される画像
         webkit-playsinline：iOS 9までのSafari用インライン再生指定
@@ -54,7 +55,7 @@
         loop：動画をループさせる
         controls：コントロールバーを表示する
         -->
-        <source src=bikeMovieBackground.mp4 type="video/mp4">
+        <source src=Top_video.mp4 type="video/mp4">
         <p>動画を再生できる環境ではありません。</p>
       </video>
       <!--/video-area--></div>
