--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
              <li><a href="#"><dl><dt><img src="img/motorrad_top.jpg" alt=""></dt><dd>Motorrad</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/EVRacingKart_top.jpg" alt=""></dt><dd>EV Racing Kart</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/MyStudy.jpg" alt=""></dt><dd>My Study</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/Gunpla_top.jpg" alt=""></dt><dd>Gunpla</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="Gunpla_top.jpg" alt=""></dt><dd>Gunpla</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/Programming.jpg" alt=""></dt><dd>Programming</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/MountainClimbing_top.jpg" alt=""></dt><dd>Mountain Climbing</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/Diving_top.jpg" alt=""></dt><dd>Diving</dd></dl></a></li>
