--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="theme-color" content="#000000">
   <link rel="stylesheet" href="navi.css">
   <link rel="stylesheet" href="html-css-intro/gators.css">
-  
+
 </head>
 
 <body>
@@ -28,13 +28,13 @@
      <li class="has-child"><a href="#">My Leisure Activity</a>
           <ul>
              <li><a href="#"><dl><dt><img src="img/activity_top.jpg" alt=""></dt><dd>Activity Top</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/motorrad_top.JPG" alt=""></dt><dd>Motorrad</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/motorrad_top.jpg" alt=""></dt><dd>Motorrad</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/EVRacingKart_top.jpg" alt=""></dt><dd>EV Racing Kart</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/MyStudy.jpg" alt=""></dt><dd>My Study</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="Gunpla_top.jpg" alt=""></dt><dd>Gunpla</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/Programming.jpg" alt=""></dt><dd>Programming</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/Gunpla_top.jpg" alt=""></dt><dd>Gunpla</dd></dl></a></li>
+             <li><a href="html-css-intro/index.html"><dl><dt><img src="img/Programming.jpg" alt=""></dt><dd>Programming</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/MountainClimbing_top.jpg" alt=""></dt><dd>Mountain Climbing</dd></dl></a></li>
-             <li><a href="#"><dl><dt><img src="img/Diving_top.jpg" alt=""></dt><dd>Diving</dd></dl></a></li>
+             <li><a href="#"><dl><dt><img src="img/MarineLeisure_top.jpg" alt=""></dt><dd>Marine Leisure</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/MyGadget_top.jpg" alt=""></dt><dd>My Gadget</dd></dl></a></li>
              <li><a href="#"><dl><dt><img src="img/Photo&Movie_top.jpg" alt=""></dt><dd>Photo & Movie</dd></dl></a></li>
      </ul>
@@ -43,7 +43,7 @@
    </ul>
    </nav>
 
-    <h1>This is My Life.</h1>
+    <h1><div id="main-target">This is My Life.</div></h1>
     <div id="video-area">
       <video id="video" poster="img/Top.jpg" webkit-playsinline playsinline muted autoplay loop>
         <!--
@@ -63,12 +63,12 @@
 
   <script src="navi.js"></script>
 
-  <div class="green-box">
+  <!-- <div class="green-box">
     <input type="text" id="green-input">
     <button id="green-button">ワニ放出！</button>
   </div>
   <div class="blue-box"></div>
-  <script src="html-css-intro/gators.js"></script>
+  <script src="html-css-intro/gators.js"></script> -->
 
 </body>
 
